adding add books feature

--- a/index.html
+++ b/index.html
@@ -43,35 +43,39 @@
         </div>
         <div class="container">
             <h3 class="sub-title">Belum selesai dibaca</h3>
-            <div class="contentwrap">
-                <span class="material-symbols-outlined">
-                    menu_book
-                </span>
-                <div class="details">
-                    <h4 class="sub-title">Title</h4>
-                    <p>Penulis</p>
-                    <p>Tahun terbit</p>
-                </div>
-                <div class="options">
-                    <input type="button" value="Selesai dibaca">
-                    <input type="button" value="Hapus">
+            <div class="contentwrap notDone">
+                <div class="belumSelesai">
+                    <span class="material-symbols-outlined">
+                        menu_book
+                    </span>
+                    <div class="details">
+                        <h4 class="sub-title">Title</h4>
+                        <p>Penulis</p>
+                        <p>Tahun terbit</p>
+                    </div>
+                    <div class="options">
+                        <input type="button" id="selesaiStatus" value="Belum selesai">
+                        <input type="button" id="hapus" value="Hapus">
+                    </div>
                 </div>
             </div>
         </div>
         <div class="container">
             <h3 class="sub-title">Selesai dibaca</h3>
-            <div class="contentwrap">
-                <span class="material-symbols-outlined">
-                    menu_book
-                </span>
-                <div class="details">
-                    <h4 class="sub-title">Title</h4>
-                    <p>Penulis</p>
-                    <p>Tahun terbit</p>
-                </div>
-                <div class="options">
-                    <input type="button" value="Selesai dibaca">
-                    <input type="button" value="Hapus">
+            <div class="contentwrap done">
+                <div class="sudahSelesai">
+                    <span class="material-symbols-outlined">
+                        menu_book
+                    </span>
+                    <div class="details">
+                        <h4 class="sub-title">Title</h4>
+                        <p>Penulis</p>
+                        <p>Tahun terbit</p>
+                    </div>
+                    <div class="options">
+                        <input type="button" value="Selesai">
+                        <input type="button" value="Hapus">
+                    </div>
                 </div>
             </div>
         </div>
