added delete and toggle features

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                         <p>Tahun terbit</p>
                     </div>
                     <div class="options">
-                        <input type="button" value="Selesai">
-                        <input type="button" value="Hapus">
+                        <input type="button" id="selesaiStatus" value="Selesai">
+                        <input type="button" id="hapus" value="Hapus">
                     </div>
                 </div>
             </div>
