--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <label for="tahun" class="sub-title">Tahun</label>
                 <input type="text" id="tahun" name="tahun" placeholder="Tahun Terbit" required>
                 <label for="selesai" class="sub-title">Selesai dibaca</label>
-                <input type="checkbox" id="selesai" name="selesai" placeholder="Selesai dibaca" required>
+                <input type="checkbox" id="selesai" name="selesai" placeholder="Selesai dibaca">
                 <div class="submitwrap">
-                    <label for="submitbook" class="submitlabel">Masukkan buku ke rak<br><span class="shelfname"></span></label>
+                    <label for="submitbook" class="submitlabel">Masukkan buku ke rak<br><span class="shelfname">(memuat rak...)</span></label>
                     <input type="submit" name="submitbook" id="submitbook" value="">
                 </div>
             </form>
